my second reporisti

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en">git 
 
 <head>
     <meta charset="UTF-8">
@@ -111,6 +111,16 @@
                 <div class="section">
                     <i class="fa-solid fa-tag"></i>
                     <h4>Promotions</h4>
+                </div>
+            </div>
+
+            <!-- emaillist row starts -->
+            <div class="emaillist-list">
+                <!-- emaillist row start -->
+                <div class="emailrow">
+                    <div class="emailrow-option">
+                        
+                    </div>
                 </div>
             </div>
         </div>
