simpel test commit

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
                 <div class="section">
                     <i class="fa-solid fa-tag"></i>
-                    <h4>Promotions</h4>
+                    <h4>Prootions</h4>
                 </div>
             </div>
 
